@@ -24,6 +24,7 @@ version <next>:
 - zscale filter
 - wve demuxer
 - zero-copy Intel QSV transcoding in ffmpeg
+- shuffleframes filter
 
 
 version 2.8:
